--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
@@ -21,9 +19,12 @@
     "@mui/x-charts": "^6.0.0-alpha.17",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
+    "gh-pages": "^6.3.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.10.3",
